fixing collapse and css errors

--- a/src/components/modus-wc-collapse/modus-wc-collapse.scss
+++ b/src/components/modus-wc-collapse/modus-wc-collapse.scss
@@ -3,12 +3,11 @@
 * Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
 */
 
-.modus-wc-collapse {
+modus-wc-collapse .modus-wc-collapse {
   background-color: var(--modus-wc-color-base-100);
   border-color: transparent;
   box-sizing: border-box;
   color: var(--modus-wc-color-base-content);
-  font-weight: var(--modus-wc--font-weight-semibold);
   margin-bottom: 12px;
   transition: none !important;
 
@@ -56,7 +55,7 @@
 [data-theme='modus-classic-light'] modus-wc-collapse .modus-wc-collapse {
   background-color: var(--modus-wc-color-white);
 
-  &.modus-wc-collapse-arrow.modus-wc-border.modus-wc-collapse-open {
+  &.modus-wc-collapse-arrow.modus-wc-collapse-open {
     border-left: var(--modus-wc-spacing-xs) solid
       var(--modus-wc-color-trimble-blue);
 
@@ -69,7 +68,7 @@
 }
 
 [data-theme='modus-classic-dark'] modus-wc-collapse .modus-wc-collapse {
-  &.modus-wc-collapse-arrow.modus-wc-border.modus-wc-collapse-open {
+  &.modus-wc-collapse-arrow.modus-wc-collapse-open {
     border-left: var(--modus-wc-spacing-xs) solid
       var(--modus-wc-color-highlight-blue);
 
